# AsyncE

./: .dockerignore  .gitignore  Cargo.toml  README.md  asdsadsad.json  cat_47a70774-bd1f-4f6b-9e72-0d53c0543a21.webm  cat_68bf073e-a9df-4083-8f7f-03bfc3c84eeb.webm  cat_702a3522-13bd-4dab-8f57-5383ad024457.webm  cat_90d452f6-66ed-4a9d-acf4-250b46f614c3.webm  cat_d3314302-3ee5-4bcb-8e97-9f6106260765.webm  cat_d85352ba-2c86-4a4b-a61c-415904ec6c52.webm  components.json  dfx.json  nodemon.json  package-lock.json  package.json  rustc-ice-2024-10-14T06_41_56-82627.txt  rustc-ice-2024-10-17T03_34_26-92310.txt  rustc-ice-2024-11-09T09_30_41-98486.txt  rustc-ice-2024-11-09T09_32_56-99311.txt  setupai.sh  sub_3babce8b-9ac3-430c-8b68-ff76a13876b3.webm  sub_a5ce6b9e-c269-4c62-a1db-9175d3a1c67b.webm  sub_bb2c2e67-cad1-4d27-beb6-e0f321068993.webm  sub_dbe67c6e-05e3-4d6d-b6b7-3e7bfac48995.webm  sub_e0586918-249d-4aca-b699-5710d672d590.webm  thu_0fd15d12-c696-4d94-b8f8-e1ff4cb70c08.webm  thu_176d0829-248d-498f-a691-9ec48d3cb2eb.webm  thu_7895ce57-5bf9-49a0-a2f9-f4a02e5a51af.webm  thu_a27c10f4-675b-4092-80cd-f94c7cb49c60.webm  thu_b93f4deb-33de-4fac-a00c-c057d41ca127.webm  thu_bd1312d6-4d7a-4914-8eb7-3a443c9721ea.webm
.github/workflows/: main.yml
docker/: Dockerfile
src/AsyncE_backend/: AsyncE_backend.did  Cargo.toml  requirements.txt
src/AsyncE_backend/src/: app.py  chat.rs  chunk.rs  globals.rs  group.rs  http.rs  invite.rs  lib.rs  meeting.rs  primary_key.rs  user.rs  video.rs  websocket.rs
src/AsyncE_frontend/: .prettierignore  .prettierrc  eslint.config.js  index.html  (+4 more)
(+104 files in other folders)
