[package]
name = "AsyncE_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mp4 = "0.14.0"
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10"
ic-websocket-cdk = "0.4.0"

uuid = { version = "1.10.0", features = ["v4"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2.2", features = ["custom"] }
