[package]
name = "AsyncE_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
# uuid = "1.11.0"
# rand = "0.8.5"
candid = "0.10"
ic-cdk = "0.16"
serde_json = "1.0"
lazy_static = "1.5.0"
ic-cdk-timers = "0.10"
ic-websocket-cdk = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
# getrandom = { version = "0.2", features = ["custom"] }
